@@ -18,11 +18,12 @@ import net.dv8tion.jda.api.entities.Message;
 import net.dv8tion.jda.api.events.message.MessageReceivedEvent;
 
 import javax.imageio.ImageIO;
+
 import java.awt.image.BufferedImage;
+import java.io.BufferedReader;
 import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.util.List;
 import java.util.UUID;
@@ -43,6 +44,24 @@ public class CreateCommands {
         List<SourceRegion> regions = argumentTranslator.getAsRegions("regions");
         MilkshakeManager manager = MilkshakeManager.getInstance();
         Template t = manager.getTemplateByName(name);
+
+        String[] installedFonts = getInstalledFonts();
+        for (SourceRegion region : regions) {
+            String regionFont = region.getFont();
+            if (regionFont.equals(""))
+                continue;
+            boolean isAvaiable = false;
+            for (String font : installedFonts) {
+                if (font.equals(regionFont)) {
+                    isAvaiable = true;
+                    break;
+                }
+            }
+            if (!isAvaiable) {
+                event.getChannel().sendMessage("**Fonte **`" + regionFont + "`** não está disponível**").queue();
+                return;
+            }
+        }
 
         if (t != null) {
             event.getChannel().sendMessage("**Já existe um template com este nome**").queue();
@@ -74,7 +93,7 @@ public class CreateCommands {
 
         File templateFile = new File("templates", name.replaceAll("[^a-zA-Z0-9.\\-]", "_") + ".milkshake");
         try {
-            Files.write(templateFile.toPath(), MilkshakeManager.GSON.toJson(jsonObject).getBytes(StandardCharsets.UTF_8));
+            Files.writeString(templateFile.toPath(), MilkshakeManager.GSON.toJson(jsonObject));
             template.setOriginalFilePath(templateFile.getPath());
             template.setWidth(image.getWidth());
             template.setHeight(image.getHeight());
@@ -156,7 +175,7 @@ public class CreateCommands {
             ImageIO.write(image, "png",imageFile);
             Source source = new Source(name, imageFile.getPath(), file.getPath(), "");
             String json = MilkshakeManager.GSON.toJson(source, Source.class);
-            Files.write(file.toPath(), json.getBytes(StandardCharsets.UTF_8));
+            Files.writeString(file.toPath(), json);
             MilkshakeManager.getInstance().addSource(source);
 
             event.getChannel().sendMessage("**Source adicionada!**").queue();
@@ -208,22 +227,26 @@ public class CreateCommands {
         EmbedBuilder embedBuilder = new EmbedBuilder();
         embedBuilder.setTitle("Guia de como criar templates:");
         embedBuilder.setColor(0xb28dff);
-        String description = "**Parâmetros:**\n`" +
-                "-x/p1: A coordenada X da imagem ou o ponto 1 (x,y)\n" +
-                "-y/p2: A coordenada Y da imagem ou o ponto 2 (x,y)\n" +
-                "-width/p3: A largura da imagem ou o ponto 3 (x,y)\n" +
-                "-height/p4: A altura da imagem ou o ponto 4 (x,y)\n" +
-                "-nº da source: O número da source, todas as sources com o mesmo número são iguais\n" +
-                "-texto: true/false, se a região é um texto ou não\n" +
-                "-prioridade: A prioridade da imagem, prioridades menores de 0 serão desenhadas antes do template, ficando no background\n" +
-                "-cor: A cor do texto em hexadecimal (#rrggbb)\n" +
-                "-orientação: A orientação do texto\n" +
-                "-fonte: A fonte do texto\n" +
-                "-cor da borda: A cor da borda do texto\n" +
-                "-tamanho da borda: O tamanho da borda do texto\n" + '`';
+        String description = """
+                **Parâmetros:**
+                `-x/p1: A coordenada X da imagem ou o ponto 1 (x,y)
+                -y/p2: A coordenada Y da imagem ou o ponto 2 (x,y)
+                -width/p3: A largura da imagem ou o ponto 3 (x,y)
+                -height/p4: A altura da imagem ou o ponto 4 (x,y)
+                -nº da source: O número da source, todas as sources com o mesmo número são iguais
+                -texto: true/false, se a região é um texto ou não
+                -prioridade: A prioridade da imagem, prioridades menores de 0 serão desenhadas antes do template, ficando no background
+                -cor: A cor do texto em hexadecimal (#rrggbb)
+                -orientação: A orientação do texto
+                -fonte: A fonte do texto
+                -cor da borda: A cor da borda do texto
+                -tamanho da borda: O tamanho da borda do texto
+                `""";
         embedBuilder.setDescription(description);
-        String links = "**Lista de cores:** <https://imagemagick.org/script/color.php#color_names>\n**Lista de orientações:** <https://www.imagemagick.org/script/command-line-options.php#gravity>\n" +
-                "**Lista de fontes:** use `magick identify -list font` para pegar todas fontes";
+        String links = """
+                **Lista de cores:** <https://imagemagick.org/script/color.php#color_names>
+                **Lista de orientações:** <https://www.imagemagick.org/script/command-line-options.php#gravity>
+                **Lista de fontes:** use `magick identify -list font` para pegar todas fontes""";
         event.getChannel().sendMessageEmbeds(embedBuilder.build()).queue();
         event.getChannel().sendMessage(links).queue();
     }
@@ -282,6 +305,54 @@ public class CreateCommands {
         }
     }
 
+    @Command(name = "fontes", description = "Lista as fontes instaladas no servidor", args = {
+        @Argument(name = "page", type = ArgumentType.INTEGER, obligatory = false)
+    })
+    public void listInstalledFonts(MessageReceivedEvent event, ArgumentTranslator translator) {
+        EmbedBuilder embedBuilder = new EmbedBuilder();
+        embedBuilder.setTitle("Fontes disponíveis:");
+        embedBuilder.setColor(0xb28dff);
+        StringBuilder description = new StringBuilder();
+        description.append("`");
+
+        String[] installedFonts = getInstalledFonts();
+        int page = Math.max(translator.getAsInteger("page"), 1);
+        int lastPage = installedFonts.length / 20;
+        page = Math.min(page, lastPage);
+        int pageOverflow = (page == lastPage)? installedFonts.length % 20 : 0;
+        for (int i = 20 * (page - 1); i < 20 * page + pageOverflow; i++)
+            description.append(installedFonts[i]).append("\n");
+
+        description.append("`");
+        embedBuilder.setDescription(description.toString());
+        embedBuilder.setFooter("Página " + page + " de " + lastPage);
+        event.getChannel().sendMessageEmbeds(embedBuilder.build()).queue();
+    }
+
+    private String[] getInstalledFonts() {
+        ProcessBuilder processBuilder = new ProcessBuilder("sh", "-c", "magick -list font | grep Font:");
+        try {
+            Process p = processBuilder.start();
+            BufferedReader reader = p.inputReader();
+            try {
+                p.waitFor();
+            } catch (InterruptedException ex) {
+                ex.printStackTrace();
+            }
+            List<String> fontList = reader.lines().toList();
+            reader.close();
+
+            String[] result = new String[fontList.size()];
+            for (int i = 0; i < result.length; i++)
+                result[i] = fontList.get(i).substring(8).toLowerCase();
+            
+            return result;
+        } catch (IOException ex) {
+            ex.printStackTrace();
+            return null;
+        }
+    }
+
     private BufferedImage inputStreamToImage(InputStream inputStream) {
         try {
             return ImageIO.read(inputStream);
@@ -294,7 +365,7 @@ public class CreateCommands {
         List<Message.Attachment> attachments = message.getAttachments();
         if (!attachments.isEmpty()) {
             try {
-                return attachments.get(0).retrieveInputStream().get();
+                return attachments.get(0).getProxy().download().get();
             } catch (InterruptedException | ExecutionException e) {
                 e.printStackTrace();
             }
